--- a/ar-activities.html
+++ b/ar-activities.html
@@ -283,8 +283,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_ar3.png" width="800" style="margin-top: -10px;" />
-
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_ar6.gif" style="margin-top: -10px; max-width: 100%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 19%; left: 60.7%; max-width: 113%;"></div>
+  </div>
   <div class="container">
 
     <!-- Sidebar -->
@@ -360,14 +362,15 @@
 
 
       <div class="topnav">
-        <a href="ar.html" class="active">
+        <a href="ar-activities.html" class="active">
           <h3 class="display-mobile" style="text-align: left;">الدكتور هونغ شو</h3>
         </a>
         <div id="myLinks" style="text-align: right;">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:left" width="45"><strong><a href="ar.html"><small>▸ عني
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:left" width="45"><strong><a href="ar.html"><small
+                    style="color: rgb(44, 44, 44);">▸ عني
+                  </small></a></strong><br>
             </li>
 
             <li><a href="ar-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>التقدم
@@ -396,19 +399,19 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• الجوائز</small></a></li>
             </div>
 
-            <li><a href="ar-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>الأنشطة</strong></small></a></li>
+            <li><a href="ar-activities.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    الأنشطة</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-activities.html"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• التحدث</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• التحدث</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-activities.html#writing"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• الكتابة</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• الكتابة</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-activities.html#visiting"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• الزيارة</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• الزيارة</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-activities.html#travel"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• السفر</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• السفر</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-activities.html#photography"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• التصوير الفوتوغرافي</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• التصوير الفوتوغرافي</small></a></li>
             </div>
 
             <li><a href="ar-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>اتصل
@@ -452,8 +455,8 @@
       </p>
 
       <p align="justify" style="text-align: right; direction: rtl;">
-
-        <span class="display-mobile">تحياتي، أصدقاء من <span id="location2"></span>! </br></br></span>
+        <br>
+        <span class="display-mobile">تحياتي، أصدقاء من <span id="location2"></span>! </br></span>
         أنا مسافر ومصور شغوف أحب كتابة المقالات، المشاركة في الخطابة العامة، والبقاء نشطاً من خلال مختلف الرياضات.
       </p>
 
