--- a/ar-contact.html
+++ b/ar-contact.html
@@ -283,7 +283,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_ar3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_ar3.gif" style="margin-top: -10px; max-width: 100%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20%; left: 54.7%; max-width: 100%;"></div>
+  </div>
 
   <div class="container">
 
@@ -413,14 +416,15 @@
 
 
       <div class="topnav">
-        <a href="ar.html" class="active">
+        <a href="ar-contact.html" class="active">
           <h3 class="display-mobile" style="text-align: left;">الدكتور هونغ شو</h3>
         </a>
         <div id="myLinks" style="text-align: right;">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:left" width="45"><strong><a href="ar.html"><small>▸ عني
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:left" width="45"><strong><a href="ar.html"><small
+                    style="color: rgb(44, 44, 44);">▸ عني
+                  </small></a></strong><br>
             </li>
 
             <li><a href="ar-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>التقدم
@@ -464,7 +468,7 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• التصوير الفوتوغرافي</small></a></li>
             </div>
 
-            <li><a href="ar-contact.html"><small style="color: rgb(97, 97, 97);">▸ <strong>اتصل
+            <li><a href="ar-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸ اتصل
                     بي</strong></small></a><br>
             </li>
             <hr>
@@ -504,9 +508,11 @@
         </span>
       </p>
       <div>
+
         <p align="justify" style="text-align: right;">
 
           <br class="display-mobile">
+
           <span class="display-mobile" style="text-align: left;">مرحبًا، أصدقاء من <span
               id="location2">العالم</span>!</br></br></span>
 
