--- a/ar-research.html
+++ b/ar-research.html
@@ -283,8 +283,9 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_ar3.png" width="800" style="margin-top: -10px;" />
-
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_ar4.gif" style="margin-top: -10px; max-width: 100%;" />
+  </div>
   <div class="container">
 
     <!-- Sidebar -->
@@ -358,27 +359,28 @@
 
 
       <div class="topnav">
-        <a href="ar.html" class="active">
+        <a href="ar-research.html" class="active">
           <h3 class="display-mobile" style="text-align: left;">الدكتور هونغ شو</h3>
         </a>
         <div id="myLinks" style="text-align: right;">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:left" width="45"><strong><a href="ar.html"><small>▸ عني
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:left" width="45"><strong><a href="ar.html"><small
+                    style="color: rgb(44, 44, 44);">▸ عني
+                  </small></a></strong><br>
             </li>
 
-            <li><a href="ar-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>التقدم
+            <li><a href="ar-research.html"><small><strong><span style="color: rgb(253, 93, 7)">▸ التقدم
                       البحثي</strong></span></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-research.html#publications"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• المنشورات</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• المنشورات</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-research.html#patents"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• براءات الاختراع</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• براءات الاختراع</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-research.html#presentations"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• المؤتمرات</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• المؤتمرات</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-research.html#equity-research"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• أبحاث حقوق الملكية</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• أبحاث حقوق الملكية</small></a></li>
             </div>
 
             <li><a href="ar-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>السيرة
