--- a/ar-resume.html
+++ b/ar-resume.html
@@ -283,7 +283,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_ar3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_ar5.gif" style="margin-top: -10px; max-width: 100%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 27%; left: 52.2%; max-width: 113%;"></div>
+  </div>
 
   <div class="container">
 
@@ -359,14 +362,15 @@
 
 
       <div class="topnav">
-        <a href="ar.html" class="active">
+        <a href="ar-resume.html" class="active">
           <h3 class="display-mobile" style="text-align: left;">الدكتور هونغ شو</h3>
         </a>
         <div id="myLinks" style="text-align: right;">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:left" width="45"><strong><a href="ar.html"><small>▸ عني
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:left" width="45"><strong><a href="ar.html"><small
+                    style="color: rgb(44, 44, 44);">▸ عني
+                  </small></a></strong><br>
             </li>
 
             <li><a href="ar-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>التقدم
@@ -382,17 +386,17 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• أبحاث حقوق الملكية</small></a></li>
             </div>
 
-            <li><a href="ar-resume.html"><small style="color: rgb(97, 97, 97);">▸ <strong>السيرة
+            <li><a href="ar-resume.html"><strong><small style="color: rgb(253, 93, 7);">▸ السيرة
                     الذاتية</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-resume.html#education-mobile"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• التعليم</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• التعليم</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-resume.html#academic-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• الأكاديميا</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• الأكاديميا</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-resume.html#industrial-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• الصناعة</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• الصناعة</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="ar-resume.html#awards"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• الجوائز</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• الجوائز</small></a></li>
             </div>
 
             <li><a href="ar-activities.html"><small style="color: rgb(97, 97, 97);">▸
