--- a/ar.html
+++ b/ar.html
@@ -283,7 +283,10 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_ar3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_ar3.gif" style="margin-top: -10px; max-width: 100%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20%; left: 54.7%; max-width: 100%;"></div>
+  </div>
 
   <div class="container">
 
@@ -426,7 +429,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:left" width="45"><strong><a href="ar.html"><small>▸ عني
-                    ⇨</small></a></strong><br>
+                  </small></a></strong><br>
             </li>
 
             <li><a href="ar-research.html"><small><span style="color: rgb(97, 97, 97);">▸ <strong>التقدم
