--- a/cn-activities.html
+++ b/cn-activities.html
@@ -398,7 +398,7 @@
       <div class="topnav">
 
 
-        <a href="cn.html" class="active">
+        <a href="cn-activities.html" class="active">
 
           <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text></rt></ruby>
             <ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby> <small><ruby>博 士<rt>科学 / Dr.</rt>
@@ -410,7 +410,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><a href="cn.html"><small
-                  style="color: rgb(97, 97, 97);">▸ <strong>关于我</strong></small></a><br>
+                  style="color: rgb(44, 44, 44);">▸ <strong>关于我</strong></small></a><br>
             </li>
 
             <li><a href="cn-research.html"><small><span style="color: rgb(97, 97, 97);">▸
@@ -507,14 +507,14 @@
         </p>
 
         <div class="video-container hidden-mobile">
-          <video controls poster="images/Bonn_preview_cn.png">
+          <video controls poster="images/Bonn_preview_cn.gif">
             <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
 
         <div class="video-container display-mobile" style="width:113%;padding-bottom: 63.25%;">
-          <video controls poster="images/Bonn_preview_cn.png">
+          <video controls poster="images/Bonn_preview_cn.gif">
             <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
