--- a/cn-contact.html
+++ b/cn-contact.html
@@ -480,7 +480,7 @@
 
       <div class="topnav">
 
-        <a href="cn.html" class="active">
+        <a href="cn-contact.html" class="active">
 
           <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text></rt></ruby>
             <ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby> <small><ruby>博 士<rt>科学 / Dr.</rt>
@@ -492,8 +492,8 @@
           <ul>
             <div style="background-color: rgb(255, 255, 255);">
               <hr>
-              <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="cn.html"><small>▸ 关于我
-                      ★</small></a></strong><br>
+              <li><img src="images/logo.png" style="float:right" width="45"><a href="cn.html"><small
+                    style="color: rgb(44, 44, 44);">▸ <strong>关于我</strong></small></a><br>
               </li>
 
               <li><a href="cn-research.html"><small><span style="color: rgb(97, 97, 97);">▸
@@ -538,8 +538,8 @@
                     style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• 运动</small></a></li>
               </div>
 
-              <li><a href="cn-contact.html"><small style="color: rgb(97, 97, 97);">▸
-                    <strong>联系我</strong></small></a><br></li>
+              <li><a href="cn-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                      联系我 ★</strong></small></a><br></li>
               <hr>
             </div>
           </ul>
