--- a/cn-gallery.html
+++ b/cn-gallery.html
@@ -447,7 +447,7 @@
 
       <div class="topnav">
 
-        <a href="cn.html" class="active">
+        <a href="cn-gallery.html" class="active">
 
           <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text></rt></ruby>
             <ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby> <small><ruby>博 士<rt>科学 / Dr.</rt>
