--- a/cn-resume.html
+++ b/cn-resume.html
@@ -397,7 +397,7 @@
       <div class="topnav">
 
 
-        <a href="cn.html" class="active">
+        <a href="cn-resume.html" class="active">
 
           <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text></rt></ruby>
             <ruby>泓<rt><text style="letter-spacing: -4px;">ㄏㄨㄥˊ</text></rt></ruby> <small><ruby>博 士<rt>科学 / Dr.</rt>
@@ -409,7 +409,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><a href="cn.html"><small
-                  style="color: rgb(97, 97, 97);">▸ <strong>关于我</strong></small></a><br>
+                  style="color: rgb(44, 44, 44);">▸ <strong>关于我</strong></small></a><br>
             </li>
 
             <li><a href="cn-research.html"><small><span style="color: rgb(97, 97, 97);">▸
