--- a/de-activities.html
+++ b/de-activities.html
@@ -320,8 +320,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_de3.gif" style="margin-top: -10px; max-width: 113%;" />
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+    <img class="display-mobile" src="images/banner_mobile_de6.gif" style="margin-top: -10px; max-width: 113%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 18.3%; left: 68.3%; max-width: 113%;"></div>
   </div>
 
   <div class="container">
@@ -398,14 +398,15 @@
 
 
       <div class="topnav">
-        <a href="de.html" class="active">
+        <a href="de-activities.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xü</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small>▸ Einführen
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Einführen
+                  </small></a></strong><br>
             </li>
 
             <li><a href="de-research.html"><small><span style="color: rgb(97, 97, 97);">▸
@@ -434,21 +435,21 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Auszeichnungen</small></a></li>
             </div>
 
-            <li><a href="de-activities.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Aktivitäten</strong></small></a></li>
+            <li><a href="de-activities.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    Aktivitäten ★</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Vortrag</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Vortrag</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html#writing"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Schreiben</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Schreiben</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html#visiting"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Besuchen</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Besuchen</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html#travel"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Reisen</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Reisen</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html#photography"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Fotografie</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Fotografie</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-activities.html#sports"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sportarten</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Sportarten</small></a></li>
             </div>
 
             <li><a href="de-contact.html"><small style="color: rgb(97, 97, 97);">▸
