--- a/de-contact.html
+++ b/de-contact.html
@@ -412,14 +412,15 @@
 
 
       <div class="topnav">
-        <a href="de.html" class="active">
+        <a href="de-contact.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xü</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small>▸ Einführen
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Einführen
+                  </small></a></strong><br>
             </li>
 
             <li><a href="de-research.html"><small><span style="color: rgb(97, 97, 97);">▸
@@ -465,8 +466,8 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Sportarten</small></a></li>
             </div>
 
-            <li><a href="de-contact.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Kontakt</strong></small></a><br>
+            <li><a href="de-contact.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    Kontakt ★</strong></small></a><br>
             </li>
             <hr>
           </ul>
