--- a/de-research.html
+++ b/de-research.html
@@ -273,8 +273,7 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_de3.gif" style="margin-top: -10px; max-width: 113%;" />
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+    <img class="display-mobile" src="images/banner_mobile_de4.gif" style="margin-top: -10px; max-width: 113%;" />
   </div>
 
   <div class="container">
@@ -351,27 +350,28 @@
 
 
       <div class="topnav">
-        <a href="de.html" class="active">
+        <a href="de-research.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xü</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small>▸ Einführen
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Einführen
+                  </small></a></strong><br>
             </li>
 
-            <li><a href="de-research.html"><small><span style="color: rgb(97, 97, 97);">▸
-                    <strong>Forschungsfortschritt</strong></span></small></a></li>
+            <li><a href="de-research.html"><strong><small><span style="color: rgb(253, 93, 7);">▸
+                      Forschungsfortschritt ★</strong></span></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="de-research.html#publications"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Publikationen</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Publikationen</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-research.html#patents"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Patente</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Patente</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-research.html#presentations"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Konferenzen</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Konferenzen</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-research.html#equity-research"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Aktienforschung</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Aktienforschung</small></a></li>
             </div>
 
             <li><a href="de-resume.html"><small style="color: rgb(97, 97, 97);">▸
