--- a/ru-activities.html
+++ b/ru-activities.html
@@ -448,14 +448,14 @@
       трансформация и технологические инновации в Китае" (глобальная трансляция)
 
       <div class="video-container hidden-mobile">
-        <video controls poster="images/Bonn_preview_cn.png">
+        <video controls poster="images/Bonn_preview.gif">
           <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4">
           Ваш браузер не поддерживает тег video.
         </video>
       </div>
 
       <div class="video-container display-mobile" style="width:113%;padding-bottom: 63.25%;">
-        <video controls poster="images/Bonn_preview_cn.png">
+        <video controls poster="images/Bonn_preview.gif">
           <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4">
           Ваш браузер не поддерживает тег video.
         </video>
