--- a/cn-research.html
+++ b/cn-research.html
@@ -454,7 +454,7 @@
             <div class="topnav">
 
 
-                <a href="cn.html" class="active">
+                <a href="cn-research.html" class="active">
 
                     <h3 class="display-mobile" align="left"><ruby>徐<rt><text style="letter-spacing: -5px;">ㄒㄩˊ</text>
                             </rt></ruby>
@@ -468,7 +468,7 @@
                     <ul>
                         <hr>
                         <li><img src="images/logo.png" style="float:right" width="45"><a href="cn.html"><small
-                                    style="color: rgb(97, 97, 97);">▸ <strong>关于我</strong></small></a><br>
+                                    style="color: rgb(44, 44, 44);">▸ <strong>关于我</strong></small></a><br>
                         </li>
 
                         <li><strong><a href="cn-research.html"><small><span>▸ 研究进展 ★</span></small></a></strong></li>
