--- a/de-resume.html
+++ b/de-resume.html
@@ -350,14 +350,15 @@
 
 
       <div class="topnav">
-        <a href="de.html" class="active">
+        <a href="de-resume.html" class="active">
           <h3 class="display-mobile">Dr. Hong Xü</h3>
         </a>
         <div id="myLinks">
           <ul>
             <hr>
-            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small>▸ Einführen
-                    ⇨</small></a></strong><br>
+            <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small
+                    style="color: rgb(44, 44, 44);">▸ Einführen
+                  </small></a></strong><br>
             </li>
 
             <li><a href="de-research.html"><small><span style="color: rgb(97, 97, 97);">▸
@@ -373,17 +374,17 @@
                   style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Aktienforschung</small></a></li>
             </div>
 
-            <li><a href="de-resume.html"><small style="color: rgb(97, 97, 97);">▸
-                  <strong>Lebenslauf</strong></small></a></li>
+            <li><a href="de-resume.html"><strong><small style="color: rgb(253, 93, 7);">▸
+                    Lebenslauf ★</strong></small></a></li>
             <div class="two-column-list" style="display: flex; flex-wrap: wrap;">
               <li style="width: 50%; box-sizing: border-box;"><a href="de-resume.html#education-mobile"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Ausbildung</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Ausbildung</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-resume.html#academic-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Akademisch</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Akademisch</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-resume.html#industrial-experience"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Industrie</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Industrie</small></a></li>
               <li style="width: 50%; box-sizing: border-box;"><a href="de-resume.html#awards"
-                  style="color: rgb(97, 97, 97);">&nbsp;&nbsp;&nbsp;<small>• Auszeichnungen</small></a></li>
+                  style="color: rgb(253, 93, 7);">&nbsp;&nbsp;&nbsp;<small>• Auszeichnungen</small></a></li>
             </div>
 
             <li><a href="de-activities.html"><small style="color: rgb(97, 97, 97);">▸
