--- a/de.html
+++ b/de.html
@@ -425,7 +425,7 @@
           <ul>
             <hr>
             <li><img src="images/logo.png" style="float:right" width="45"><strong><a href="de.html"><small>▸ Einführen
-                    ⇨</small></a></strong><br>
+                    ★</small></a></strong><br>
             </li>
 
             <li><a href="de-research.html"><small><span style="color: rgb(97, 97, 97);">▸
