--- a/jp-research.html
+++ b/jp-research.html
@@ -270,7 +270,9 @@
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
-  <img class="display-mobile" src="images/banner_mobile_jp3.png" width="800" style="margin-top: -10px;" />
+  <div class="display-mobile" style="position: relative">
+    <img class="display-mobile" src="images/banner_mobile_jp4.gif" style="margin-top: -10px; max-width: 113%;" />
+  </div>
 
   <div class="container">
 
