--- a/jp.html
+++ b/jp.html
@@ -273,7 +273,7 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_jp3.png" width="800"
+    <img class="display-mobile" src="images/banner_mobile_jp3.gif" width="800"
       style="margin-top: -10px; max-width: 113%;">
     <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
   </div>
