--- a/kr-activities.html
+++ b/kr-activities.html
@@ -524,14 +524,14 @@
         <strong>▸ 유엔 본 기후변화 회의</strong> 분과 사회자/연사 《중국의 에너지 전환과 기술 혁신》(글로벌 생중계)
 
         <div class="video-container hidden-mobile">
-          <video controls poster="images/Bonn_preview_cn.png">
+          <video controls poster="images/Bonn_preview.gif">
             <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4">
             귀하의 브라우저는 비디오 태그를 지원하지 않습니다.
           </video>
         </div>
 
         <div class="video-container display-mobile" style="width:113%;padding-bottom: 63.25%;">
-          <video controls poster="images/Bonn_preview_cn.png">
+          <video controls poster="images/Bonn_preview.gif">
             <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4">
             귀하의 브라우저는 비디오 태그를 지원하지 않습니다.
           </video>
